<resources>
    <string name="app_name">ch2top5</string>
    <string name="app_name">Firebass Auth</string>
    <string name="sign_in">Sign-In</string>
    <string name="sign_up">Sign-Up</string>
    <string name="button">Button</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">OR</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="log_out">Log Out</string>
</resources>