<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".LoginActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                android:id="@+id/tbSignIn"/>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="LOGIN"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <!-- Box Email -->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmailSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_edit_text"
                    android:hint="username"
                    android:inputType="textEmailAddress"
                    android:paddingStart="32dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/Primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassSignIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edit_text"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="32dp"
                        android:paddingTop="16dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="16dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/btnForgotPass"
                    android:layout_width="162dp"
                    android:layout_height="51dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_forgot_pass"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_btn_primary"
                    android:text="login"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/or"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />




                <FrameLayout
                    android:id="@+id/btnFacebookSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_btn_signup"
                    android:elevation="2dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal"
                        tools:ignore="UseCompoundDrawables">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="SIGN-UP"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </LinearLayout>

                </FrameLayout>
                <!-- btn Google -->
                <FrameLayout
                    android:id="@+id/btnGoogleSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_btn_google"
                    android:elevation="2dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/ic_google" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:text="Google"
                            android:textAllCaps="true"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>